# trix

./: .gitignore  ARCHIVED.md  CHANGELOG.md  LICENSE  PRD.md  PRD_MESA_15.md  README.md  pyproject.toml
TriXO/: CHANGELOG.md  README.md  pyproject.toml
TriXOR/: CONTRIBUTING.md  README.md
archive/: README.md
configs/: validation.yaml
docs/: ABSTRACT.md  ADDRESS_ABI.md  ADDRESS_CONTRACT.md  ALPHA_SCALES.md  BENCHMARKS.md  BUILD_LOG.md  BUNDLE_SCHEMA.md  BUTTERFLY_MATMUL.md  CACHE_COHERENCY.md  CLI.md  DOT_POPCOUNT_EQUIVALENCE.md  DRIFT_POLICY.md  EXPERIMENT_QUICK_REFERENCE.md  FFT_ATOMS_HYBRID.md  FFT_COMPILATION.md  FINDINGS.md  FP4_ATOMS_RESULTS.md  FUTURE_DEVELOPMENT_PLAN.md  GAP_ANALYSIS.md  GATE1_SIGNATURE_SURGERY_FINDINGS.md  GEOMETRIC_TRIX.md  GLOSSARY.md  INDEX.md  INSTALL.md  ISOMORPHIC_TRANSFORMER.md  KNOWN_LIMITS.md  LIFECYCLE_V1.md  MESA8_FP4_ATOMS.md  MESA_10_CHUDNOVSKY.md  MESA_10_RIEMANN_PROBE.md  MESA_9_10_SUMMARY.md  MESA_9_EULER_PROBE.md  NATIVE_CORRECTNESS.md  NEON_OPTIMIZATION_PLAN.md  NETWORK_SILICON.md  OPTION_B_PLAN.md  P0_INTEGRATION_SUMMARY.md  PQH_EXECUTIVE_SUMMARY.md  QUICKSTART.md  RIEMANN_HUNTER_OVERVIEW.md  (+28 more)
examples/: nvidia_quickstart.py
experiments/: README.md  analyze.py  attention_replacement_test.py  benchmark_v2_rigorous.py  benchmark_v2_tinyshakespeare.py  bracket_depth.py  bracket_depth_simple.py  bracket_matching.py  eval_tiny.py  fuzzy_boundary_test.py  geometry_thesis.py  riemann_chunked.py  riemann_tesseract.py  riemann_tesseract_prove.py  run_all.py  train.py  trix_6502_atomic.py  trix_6502_atomic_exact.py  trix_6502_atomic_simple.py  trix_6502_comparison.py  trix_6502_full_stack.py  trix_6502_proper_data.py  trix_6502_routing_only.py
native/: CMakeLists.txt  README.md
native/src/: jsonl.cpp  jsonl.h  main.cpp  metrics.cpp  metrics.h  routing.cpp  routing.h  ternary_pack.h
native/tests/: test_dot_popcount_equivalence.cpp  test_falsify.cpp  test_margin_sweep_properties.cpp  test_metrics.cpp  test_routing_invariants.cpp
notes/: 00_the_process.md  01_raw_thoughts_hybrid.md  02_nodes_of_opportunity.md  03_engineering_lens.md  04_convergence.md  05_holding_to_the_sun.md  PLAN_repo_hygiene.md  ROADMAP_FP4.md  SESSION_INDEX.md  emergence_session_01_raw.md  emergence_session_02_reflection.md  emergence_session_03_convergence.md  flynnconceivable_session_01_raw.md  flynnconceivable_session_02_reflection.md  flynnconceivable_session_03_convergence.md  fp4_plumbing_1_raw.md  fp4_plumbing_2_explore.md  fp4_plumbing_3_convergence.md  hollywood_layered_1_raw.md  hollywood_nufft_1_raw.md  hollywood_nufft_2_exploration.md  hollywood_nufft_3_convergence.md  hollywood_xor_1_raw.md  hollywood_xor_2_exploration.md  hollywood_xor_3_convergence.md  journal_1_raw_experience.md  journal_2024_12_16_fft_session.md  journal_2026_03_01_LMM_repo_assessment.md  journal_2026_03_01_repo_familiarization.md  journal_2_exploration.md  journal_3_convergence.md  journal_isomorphic_1_raw.md  journal_isomorphic_2_exploration.md  journal_isomorphic_3_convergence.md  journal_transforms_1_raw.md  journal_transforms_2_exploration.md  journal_transforms_3_convergence.md  matmul_1_raw.md  matmul_2_exploration.md  matmul_3_convergence.md  (+34 more)
scripts/: benchmark_thor.py  benchmark_triton_dequant.py  benchmark_v3.py  demo_compiler.py  test_hybrid_block.py  validate_fp4_atoms.py  validate_thor_claims.py
src/trix/kernel/: CMakeLists.txt  __init__.py  bindings.py
tests/: test_ab_harness.py  test_bundle_v1.py  test_butterfly_matmul.py  test_cli_falsify_json.py  test_cli_json.py  test_compiled_dispatch.py  test_compiled_dispatch_forced_tile.py  test_drift_policy_telemetry_falsify.py  test_dropin_ffn.py  test_guardian.py  test_kernel_alpha_falsify.py  test_kernel_alpha_scales.py  test_kernel_reference_harness.py  test_lifecycle_falsify.py  test_lifecycle_v1.py  test_mesa14_falsify.py  test_mesa15_compatibility.py  test_mesa15_drift_policy.py  test_mesa15_manifest.py  test_mesa15_policy_enforcement.py  test_number_theory.py  test_policy_flat_popcount_falsify.py  (+5 more)
(+318 files in other folders)
