[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trix"
version = "0.1.0"
description = "2-Bit Sparse Ternary Neural Networks with ARM NEON Acceleration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TriX Contributors"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["neural-network", "sparse", "quantization", "2-bit", "ternary", "neon", "arm"]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
all = [
    "trix[dev]",
]

[project.urls]
Homepage = "https://github.com/trix/trix"
Repository = "https://github.com/trix/trix"

[tool.setuptools.packages.find]
where = ["src"]
include = ["trix*"]

[tool.setuptools.package-data]
"trix.kernel" = ["*.h", "*.cpp", "CMakeLists.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/trix"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
